Fix double vertical scrollbars on chrome

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,7 +13,7 @@ nav {
 	gap: 2rem;
 }
 
-html,body {
+body {
 	overflow-x: hidden;
 	max-width: 100%;
 }
